<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="launch_url">Launch URL</string>
    <string name="copy_password">Copy Password</string>
    <string name="copy_username">Copy Username</string>
    <string name="app_name_short">Epassafe</string>
    <string name="enter_master_password">Enter Master Password</string>
    <string name="request_new_master_password">Please provide a master password that will be used to encrypt your password database.</string>
    <string name="ok_label">OK</string>
    <string name="open_label">Open</string>
    <string name="request_master_password_dialog_title">Master Password</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="no_accounts">No Accounts</string>
    <string name="generic_error">Encountered an unexpected error</string>
    <string name="request_master_password">Please enter your master password</string>
    <string name="invalid_password">Invalid password</string>
    <string name="add_account_prompt">Click <b>Add</b> to add an account to your new database</string>
    <string name="decrypting_db">Decrypting…</string>
    <string name="account_name">Account</string>
    <string name="userid">User ID</string>
    <string name="password">Password</string>
    <string name="url">URL</string>
    <string name="notes">Notes</string>
    <string name="search_label">Account Search</string>
    <string name="search_results">Search Results</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_account" tools:ignore="MissingTranslation">Delete Account</string>
    <string name="add_account">Add Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="account_already_exists_error">An account with this name already exists</string>
    <string name="account_name_required_error">Account Name is required</string>
    <string name="existing_master_password">Existing master password</string>
    <string name="change_master_password">Password Configuration</string>
    <string name="more">Settings</string>
    <string name="password_too_short">Master password must be at least %1$d characters long</string>
    <string name="new_passwords_dont_match">New passwords don\'t match</string>
    <string name="new_password">New Password</string>
    <string name="new_password_confirm">New Password Confirmation</string>
    <string name="no_accounts_found">No Accounts Found</string>
    <string name="restore">Restore Backup</string>
    <string name="backup">Backup</string>
    <string name="error_saving_after_delete">Error saving database following a delete</string>
    <string name="account_deleted">Account \'%s\' deleted</string>
    <string name="about">About</string>
    <string name="close">Close</string>
    <string name="homepage">Homepage</string>
    <string name="homepageUrl">http://www.epassafe.com</string>
    <string name="donate">Donate</string>
    <string name="donateURL"></string>
    <string name="aboutText">
        UPM Epassafe allows you to store usernames, passwords and 
        generic notes in an encrypted database protected by one master 
        password.<br></br> https://github.com/appatalks/Epassafe/ \n\nVersion: %s
    </string>
    <string name="file_problem">Problem performing file operation</string>
    <string name="restore_file_doesnt_exist">The file to restore from doesn\'t exist\n[%s]</string>
    <string name="backup_file_exists">The backup file already exists on your SD card.\n%s\nDo you want to overwrite?"</string>
    <string name="confirm_restore_overwrite">Are you sure you want to replace your existing database with the one on your SD card?"</string>
    <string name="backup_complete">Database backed up to %s</string>
    <string name="saving_database">Saving Database</string>
    <string name="emp_new_db_options">Would you like to create a new database or open an existing one from a remote location?</string>
    <string name="emp_create_new_database">Create New Database</string>
    <string name="emp_open_remote_db">Retrieve From HTTP Location</string>
    <string name="new_database">New Database</string>
    <string name="download">Download</string>
    <string name="download_remote_database">Download Remote Database</string>
    <string name="downloading_db">Downloading Database…</string>
    <string name="problem_downloading_db">Problem Downloading Database</string>
    <string name="not_password_database">Not a Password Database</string>
    <string name="sync">Sync</string>
    <string name="problem_decrypying_db">Problem decrypting database</string>
    <string name="enter_password_cancalled">No password provided</string>
    <string name="generic_error_with_message">Unexpected Error…\n\n%s</string>
    <string name="syncing_database">Syncing Database</string>
    <string name="problem_reading_upm_db">Problem reading database</string>
    <string name="new_db_downloaded">New Database Downloaded</string>
    <string name="db_uptodate">Database up to date</string>
    <string name="preferences">Preferences</string>
    <string name="no_remote_db">This database has not been configured with a remote URL</string>
    <string name="settings_title">UPM Preferences</string>
    <string name="shared_database_settings">HTTP Server Settings</string>
    <string name="shared_url">URL</string>
    <string name="shared_url_summary">HTTP URL used to share database</string>
    <string name="shared_url_auth">HTTP Authentication Account</string>
    <string name="shared_url_auth_summary">Required if URL is password protected</string>
    <string name="problem_saving_db">Problem Saving Database\n\n%s</string>
    <string name="uploading_database">Uploading Database</string>
    <string name="db_sync_complete">Database Sync Complete</string>
    <string name="db_sync_error">Database Sync Error\n\n%s</string>
    <string name="sync_required">A sync is required before carrying out this operation</string>
    <string name="delete_db">Delete Database</string>
    <string name="confirm_delete_db">Are you sure you want to delete your db? Once deleted the database is gone forever.</string>
    <string name="confirm_exit_title">Exit UPM Epassafe?</string>
    <string name="confirm_exit_message">Are you sure you want to lock Epassafe?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_uri">No URL on this account</string>
    <string name="import_cert">Import Certificate</string>
    <string name="delete_cert">Delete Certificate</string>
    <string name="import_cert_message">Ensure your SD card has the file %s in it\'s root directory</string>
    <string name="cert_imported">Certificate Imported</string>
    <string name="cert_deleted">Certificate Deleted</string>
    <string name="no_cert_available">No Certificate Available</string>
    <string name="trusted_hostname">Trusted Hostname</string>
    <string name="trusted_hostname_summary">Hostname to always trust</string>
    <string name="cancel">Cancel</string>
    <string name="restore_database">Restore Database From Backup</string>
    <string name="create">Create</string>
    <string name="new_master_password_message">Choose your master password carefully. It should be difficult for others to guess but easy for you to remember.</string>
    <string name="dont_forget_password_warning">If you forget your master password there\'s no way of opening your password database. There are no backdoors and consequently you are sol eeek.</string>
    <string name="backup_message">NOTE: If you uninstall UPM Epassafe your password database will be deleted along with it. For this reason it\'s important you backup your data regularly (available in the menu).</string>
    <string name="search_hint">Search Accounts</string>
    <string name="sync_method">Sync Method</string>
    <string name="sync_method_disabled">Disabled</string>
    <string name="sync_method_http">HTTP Server</string>
    <string name="sync_settings">Sync Settings</string>
    <string name="problem_uploading">Problem Uploading Database</string>
    <string name="confirm_delete_dialog" tools:ignore="MissingTranslation">Are you sure you want to delete your Account? Once deleted the account is gone forever.</string>
    <string name="lock_timeout" tools:ignore="MissingTranslation">Time to autolock: %s </string>
    <string name="app_name" tools:ignore="MissingTranslation">PassGenerator</string>
    <string name="gen_settings_title" tools:ignore="MissingTranslation">PassGenerator Settings</string>
    <string name="settings" tools:ignore="MissingTranslation">Settings</string>
    <string name="password_settings" tools:ignore="MissingTranslation">Password settings</string>
    <string name="option_length" tools:ignore="MissingTranslation">Length</string>
    <string name="option_letters" tools:ignore="MissingTranslation">Include letters</string>
    <string name="option_capital_letters" tools:ignore="MissingTranslation">Include Capital letters</string>
    <string name="option_numbers" tools:ignore="MissingTranslation">Include numbers</string>
    <string name="option_symbols" tools:ignore="MissingTranslation">Include symbols</string>
    <string name="option_length_not_valid" tools:ignore="MissingTranslation">You must enter a number between #OPTION_LENGTH_MIN# and #OPTION_LENGTH_MAX#</string>
    <string name="clipboard_settings" tools:ignore="MissingTranslation">Clipboard settings</string>
    <string name="option_clipboard" tools:ignore="MissingTranslation">Enable clipboard</string>
    <string name="option_clipboard_summary" tools:ignore="MissingTranslation">Enables copy password to clipboard</string>
    <string name="generate" tools:ignore="MissingTranslation">Generate</string>
    <string name="clipboard_copy" tools:ignore="MissingTranslation">Copy to clipboard</string>
    <string name="clipboard_empty" tools:ignore="MissingTranslation">There\'s no password to copy</string>
    <string name="clipboard_copied" tools:ignore="MissingTranslation">Password copied</string>
    <string name="about_title" tools:ignore="MissingTranslation">About PassGenerator</string>
    <string name="about_text" tools:ignore="MissingTranslation">Passgenerator is a password generation tool. With this you can generate a password and send it to android clipboard.</string>
    <string name="current_encryption">Current encryption:</string>
    <string name="use_modern_encryption">Use modern encryption (AES-GCM)</string>
    <string name="modern_encryption_description">Modern encryption uses memory-hard key derivation for enhanced security against specialized hardware attacks.</string>
    <string name="use_chacha20">Use ChaCha20-Poly1305 (instead of AES-GCM)</string>
    <string name="chacha20_description">ChaCha20 may be faster on devices without hardware AES acceleration.</string>
    <string name="encryption_upgrade_success">Encryption upgraded successfully!</string>
    <string name="yubikey_2fa_section_title">YubiKey 2FA (NFC / USB)</string>
    <string name="yubikey_not_enrolled">No YubiKey enrolled</string>
    <string name="yubikey_enable_2fa">Enable YubiKey 2FA</string>
    <string name="yubikey_enroll_button">Enroll YubiKey</string>
    <string name="yubikey_tap_to_enroll">Tap or plug in your YubiKey now to enroll…</string>
    <string name="yubikey_description">Adds a second factor using your YubiKey via NFC tap or USB plug-in. You will need your YubiKey each time you unlock the database. Requires a YubiKey 5 NFC/USB-C or compatible.</string>
    <string name="yubikey_nfc_required_warning">⚠ Requires NFC or USB connection. If you lose your YubiKey, use your recovery code to regain access. Leave settings after enrolled to complete.</string>
</resources>