<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView  
        android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:gravity="center" 
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/app_name"
    />
    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"         
        android:layout_gravity="center"
        android:stretchColumns="*">

        <TableRow android:layout_marginBottom="10dp">
            <TextView 
                android:text="@string/option_length"         		
                android:textSize="18sp"/>
            <TextView 
                android:id="@+id/option_length"
                android:gravity="center"
                android:textColor="#ffffff"
                android:textStyle="bold"/>
        </TableRow>

        <TableRow android:layout_marginBottom="10dp">
            <TextView 
                android:text="@string/option_letters"         		
                android:textSize="18sp"/>
            <ImageView
                android:id="@+id/option_letters"
                android:src="@drawable/on"
                android:scaleType="fitCenter"
                android:layout_width="15dp"
                android:layout_height="14dp"/>         	
        </TableRow>

        <TableRow android:layout_marginBottom="10dp">
            <TextView 
                android:text="@string/option_capital_letters"         		
                android:textSize="18sp"/>
            <ImageView
                android:id="@+id/option_capital_letters"
                android:src="@drawable/on"
                android:scaleType="fitCenter"
                android:layout_width="15dp"
                android:layout_height="14dp"/>         	
        </TableRow>

        <TableRow android:layout_marginBottom="10dp">
            <TextView 
                android:text="@string/option_numbers"         		
                android:textSize="18sp"/>
            <ImageView
                android:id="@+id/option_numbers"
                android:src="@drawable/on"
                android:scaleType="fitCenter"
                android:layout_width="15dp"
                android:layout_height="14dp"/>         	
        </TableRow>

        <TableRow android:layout_marginBottom="10dp">
            <TextView 
                android:text="@string/option_symbols"         		
                android:textSize="18sp"/>
            <ImageView
                android:id="@+id/option_symbols"
                android:src="@drawable/on"
                android:scaleType="fitCenter"
                android:layout_width="15dp"
                android:layout_height="14dp"/>         	
        </TableRow>

    </TableLayout>
      
    <LinearLayout 
        android:layout_height="wrap_content" 
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">	     
        <Button 
            android:text="@string/generate" 
            android:id="@+id/generate" 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content" 	     	
            android:layout_gravity="center|center_horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>	   
    </LinearLayout>
	 
    <LinearLayout 
        android:layout_height="wrap_content" 
        android:layout_width="match_parent"
        android:background="#333" 
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">	     

        <TextView 
            android:id="@+id/password"
            android:layout_width="match_parent" 
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="1dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="#010101"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#fff"/>
    </LinearLayout>
	 
    <LinearLayout 
        android:id="@+id/clipboardBlock"	  	
        android:layout_height="wrap_content" 
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">	     
        <Button 
            android:text="@string/clipboard_copy" 
            android:id="@+id/clipboard_copy" 
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content" 	     	
            android:layout_gravity="center|center_horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"/>	   
    </LinearLayout>
</LinearLayout>
